<resources>
    <string name="app_name">What\'s for Dinner?</string>
    <string name="name">Name</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="login_as_admin">Login as Admin</string>
    <string name="login_as_user">Login as User</string>
    <string name="citrus">citrus</string>
    <string name="browse_recipes">Browse Recipes</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="my_week">My Week</string>
    <string name="grocery_list">Grocery List</string>
    <string name="action_settings">Settings</string>
    <string name="category_prompt">Choose a Category</string>
    <string name="name_of_recipe">Name of Recipe:</string>
    <string name="instructions">Instructions:</string>
    <string name="servings">Servings:</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="add_an_ingredient">Add an Ingredient:</string>
    <string name="how_much">How much?</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="search">Search</string>
<<<<<<< HEAD
    <string name="what_s_for_dinner">What\'s for Dinner?</string>
=======
    <string name="textview">TextView</string>
<<<<<<< HEAD
    <string name="servings">Servings:</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
>>>>>>> c144b7b144cee96ce15dad3cc6bc1731054c8d63
=======
>>>>>>> 126c7bb81b160d10d4858a15064e3b261e114ca5
    <string-array name="category_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
        <item>5 Minute Meal</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Make Ahead Meal</item>
    </string-array>
    <string-array name="measurement_array">
        <item>Tsp</item>
        <item>Tbsp</item>
        <item>Cup</item>
    </string-array>
    <string-array name="fractions_array">
        <item>0</item>
        <item>1/16</item>
        <item>1/8</item>
        <item>1/4</item>
        <item>1/3</item>
        <item>1/2</item>
        <item>2/3</item>
        <item>3/4</item>
    </string-array>
    <string-array name="digit_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="type_array">
        <item>Produce</item>
        <item>Dairy</item>
        <item>Meat</item>
        <item>Frozen</item>
        <item>Bakery</item>
        <item>Canned Goods</item>
        <item>Pasta and Rice</item>
        <item>Oils and Sauces</item>
        <item>Snacks and Crackers</item>
        <item>Drinks</item>
    </string-array>
</resources>
