<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d0aae6"
    tools:context="com.example.sarahgardiner.whatsfordinner.adminMenu">

    <Button
        android:id="@+id/button"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="onBrowseClick"
        android:text="@string/browse_recipes"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="onWeekClick"
        android:text="@string/my_week"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="onSearchClick"
        android:text="@string/search"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="onGroceryClick"
        android:text="@string/grocery_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</android.support.constraint.ConstraintLayout>
