<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#d0aae6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarahgardiner.whatsfordinner.loginpage">

    <TextView
        android:id="@+id/passlabel"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unameLabel"
        android:layout_width="134dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="245dp"
        android:layout_marginTop="60dp"
        android:text="@string/login_as_admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onadminClick"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/userButton"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="155dp"
        android:layout_marginTop="42dp"
        android:text="@string/login_as_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="onUserClick"
        app:layout_constraintTop_toBottomOf="@+id/adminButton" />

</android.support.constraint.ConstraintLayout>
