<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#d0aae6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarahgardiner.whatsfordinner.AddIngredientPage">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="82dp"
        android:layout_height="28dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="27dp"
        android:text="@string/name"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="242dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_an_ingredient"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="143dp"
        android:layout_height="28dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="88dp"
        android:text="@string/how_much"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/iName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/iMeasurement"
        android:layout_width="121dp"
        android:layout_height="37dp"
        android:layout_marginTop="95dp"
        android:entries="@array/measurement_array"
        android:popupBackground="@android:color/darker_gray"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iName" />

    <Spinner
        android:id="@+id/iFractions"
        android:layout_width="117dp"
        android:layout_height="35dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="43dp"
        android:entries="@array/fractions_array"
        android:popupBackground="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/iMeasurement"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/iDigits"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="43dp"
        android:entries="@array/digit_array"
        android:popupBackground="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/iFractions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/addIngredient3"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="99dp"
        android:onClick="addIngredientPageButton"
        android:text="@string/add_ingredient"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iMeasurement"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iType"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/iType"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="99dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="67dp"
        android:entries="@array/type_array"
        app:layout_constraintBottom_toTopOf="@+id/addIngredient3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iDigits" />

</android.support.constraint.ConstraintLayout>
